changes in texts and links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="image" src="Images/myAvatar2.png" alt="Sourav Bhowmick's Avatar">
       <h2>Hello.</h2>
-      <p class="intro">I am a Programmer and Web Developer. I'm also a gamer with my gaming channel called "Lucifer Games". And Yes, I ♥ tea and Mixed Fried Rice.</p>
+      <p class="intro">I am a Programmer and Web Developer. I'm also a gamer with my gaming channel called "Lucifer Games". And I ♥ tea. </p>
     </div>
     <hr>
     <div class="skills">
@@ -49,16 +49,16 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Even if it's just to say hello</h3>
-      <p class="outro">Love Mixed Fried Rice as much as I do? Or Love Games? Let's talk about how awesome it is! We can code while drinking some tea or eat some fried rice!</p>
+      <p class="outro">Love Tea as much as I do? Or Love some games? Let's talk about how awesome they are! We can code while drinking some tea! </p>
       <a class="btn" href="mailto:souravbhowmick15@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/sourav-bhowmick-9293b617b/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/sourav7445">Twitter</a>
+    <a class="footer-link" href="https://www.youtube.com/channel/UCrrXRs5HSrSRbLUQDGlIBsQ">Youtube</a>
     <p class="copyright">© 2020 Sourav Bhowmick.</p>
   </div>
 
